# strimzi-gravitino

./: .gitignore  .gitmodules  CLAUDE.md  README.md  gravitino-manifests.sh
client/flink-app/: Dockerfile  build-in-minikube.sh  flink-deployment.yaml  flink-session.yaml
client/kstreams-app/: .gitignore  Dockerfile  README.md  build-and-deploy.sh  pom.xml
client/kstreams-app/kubernetes/: copy-minio-secret.sh  deployment.yaml  namespace.yaml
client/python/: main.py  pyproject.toml
example-resources/: attach-tags.sh
setup/: .gitignore   common.sh  gravitino-manifests.sh  install.sh  setup.sh
setup/apicurio-registry/: apicurio-registry-deployment.yaml  apicurio-registry-service.yaml  kustomization.yaml
setup/data-generator-app/: data-gen-deployment.yaml  data-gen-namespace.yaml  kustomization.yaml
setup/example-resources/: attach-tags.sh  create-fileset-catalog.sh  create-fileset.sh  create-iceberg-catalog.sh  create-relational-catalog.sh  create-tables.sh  create-tags.sh  example-topics.yaml  setup-kafka.sh  upload-minio-data.sh
setup/flink-app/: flink-deployment.yaml
setup/gravitino-install/: create-minio-credentials-secret.sh  kustomization.yaml  patch-deployment-resources.yaml  patch-deployment.yaml  patch-gravitino-configmap.yaml  patch-gravitino-deployment.yaml  patch-iceberg-rest-configmap.yaml  patch-iceberg-rest-deployment.yaml
setup/kafka/: kafka-single-node.yaml  kustomization.yaml
setup/manifests/gravitino/: gravitino-manifests-1.0.8.yaml
setup/minio/: kustomization.yaml
setup/postgres/: postgres-resources.yaml
(+13 files in other folders)
